--- a/setup.env
+++ b/setup.env
@@ -34,12 +34,18 @@ $ONL/tools/make-versions.py --import-file=$ONL/tools/onlvi --class-name=OnlVersi
 export BUILDROOTMIRROR=${BUILDROOTMIRROR:-"http://buildroot.opennetlinux.org/dl"}
 
 # These submodules are required for almost everything.
-$ONL/tools/submodules.py $ONL sm/infra
-$ONL/tools/submodules.py $ONL sm/bigcode
-$ONL/tools/submodules.py $ONL sm/build-artifacts
-$ONL/tools/submodules.py $ONL sm/dent-artifacts
-$ONL/tools/submodules.py $ONL sm/iproute2
-$ONL/tools/submodules.py $ONL sm/ethtool
+#$ONL/tools/submodules.py $ONL sm/infra
+#$ONL/tools/submodules.py $ONL sm/bigcode
+#$ONL/tools/submodules.py $ONL sm/build-artifacts
+#$ONL/tools/submodules.py $ONL sm/dent-artifacts
+#$ONL/tools/submodules.py $ONL sm/iproute2
+#$ONL/tools/submodules.py $ONL sm/ethtool
+
+# tools/submodules.py is not working with git v 2.20.1
+# because 'git submodule status' command output was changed
+# no more '-' sign shown
+
+git submodule update --checkout
 
 # Prepopulate local REPO with build-artifacts.
 cp -R $ONL/sm/build-artifacts/REPO/* $ONL/REPO
@@ -60,7 +66,6 @@ export ONLPM_OPTION_PLATFORM_ALLOWLIST="\
 arm-accton-as4610-54-r0
 arm64-nxp-ls1043ardb-r0
 arm64-nxp-ls1046ardb-r0
-arm64-delta-tx4810-r0
 arm64-delta-tn4810m-r0
 arm64-delta-tn48m2-r0
 arm64-delta-tn48m-r0
