--- a/setup.env
+++ b/setup.env
@@ -45,6 +45,7 @@ export BUILDROOTMIRROR=${BUILDROOTMIRROR:-"http://buildroot.opennetlinux.org/dl"
 # because 'git submodule status' command output was changed
 # no more '-' sign shown
 
+git submodule init
 git submodule update --checkout
 
 # Prepopulate local REPO with build-artifacts.
