--- a/setup.env
+++ b/setup.env
@@ -34,19 +34,12 @@ $ONL/tools/make-versions.py --import-file=$ONL/tools/onlvi --class-name=OnlVersi
 export BUILDROOTMIRROR=${BUILDROOTMIRROR:-"http://buildroot.opennetlinux.org/dl"}
 
 # These submodules are required for almost everything.
-#$ONL/tools/submodules.py $ONL sm/infra
-#$ONL/tools/submodules.py $ONL sm/bigcode
-#$ONL/tools/submodules.py $ONL sm/build-artifacts
-#$ONL/tools/submodules.py $ONL sm/dent-artifacts
-#$ONL/tools/submodules.py $ONL sm/iproute2
-#$ONL/tools/submodules.py $ONL sm/ethtool
-
-# tools/submodules.py is not working with git v 2.20.1
-# because 'git submodule status' command output was changed
-# no more '-' sign shown
-
-git submodule init
-git submodule update --checkout
+$ONL/tools/submodules.py $ONL sm/infra
+$ONL/tools/submodules.py $ONL sm/bigcode
+$ONL/tools/submodules.py $ONL sm/build-artifacts
+$ONL/tools/submodules.py $ONL sm/dent-artifacts
+$ONL/tools/submodules.py $ONL sm/iproute2
+$ONL/tools/submodules.py $ONL sm/ethtool
 
 # Prepopulate local REPO with build-artifacts.
 cp -R $ONL/sm/build-artifacts/REPO/* $ONL/REPO
