--- a/builds/any/rootfs/buster/common/arm64-base-packages.yml
+++ b/builds/any/rootfs/buster/common/arm64-base-packages.yml
@@ -1,2 +1,12 @@
 - u-boot-tools
 - onl-kernel-5.15-lts-arm64-all-modules
+- frr
+- mrvl-fw-image
+- bridge-utils
+- mstpd
+- bash-completion
+- man-db
+- dnsmasq
+- dnsutils
+- keepalived
+- lldpd
