--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,6 @@ steps:
 - name: test
   image: chornyitaras/builder10:1.4
   commands:
-  - chornyitaras/builder10:1.4
+  - sudo apt-cacher-ng
   - source setup.env
   - make arm64
