--- a/.drone.yml
+++ b/.drone.yml
@@ -6,5 +6,7 @@ steps:
   image: chornyitaras/builder10:1.4
   commands:
   - sudo apt-cacher-ng
+  - pwd
+  - ls -la
   - . setup.env
   - make arm64
