--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,26 @@
-- task: Bash@3
+# Docker
+# Build a Docker image
+# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+
+trigger:
+- buster
+
+resources:
+- repo: self
+
+variables:
+  tag: '$(Build.BuildId)'
+
+stages:
+- stage: Build
+  displayName: Build image
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - task: Bash@2
   inputs:
     targetType: 'inline'
     script: |
