--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,14 @@ steps:
       # Write your commands here
       
       ls -la
+- task: DockerInstaller@0
+  inputs:
+    dockerVersion: '17.09.0-ce'
+
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
+      make docker
