--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,11 @@ steps:
 - task: DockerInstaller@0
   inputs:
     dockerVersion: '17.09.0-ce'
-
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '2.7'
+    addToPath: true
+    architecture: 'x64'
 - task: Bash@3
   inputs:
     targetType: 'inline'
