--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,11 @@ steps:
     script: |
       # Write your commands here
       
+      ls -la /usr/bin
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
       docker/tools/onlbuilder -9
