--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,11 @@ jobs:
   - task: DockerInstaller@0
     inputs:
       dockerVersion: '17.09.0-ce'
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.10'
-      addToPath: true
-      architecture: 'x64'
+  #- task: UsePythonVersion@0
+  #  inputs:
+  #    versionSpec: '3.10'
+  #    addToPath: true
+  #   architecture: 'x64'
   - task: Bash@3
     timeoutInMinutes: 360
     inputs:
